--- a/ema10_limit.cfg
+++ b/ema10_limit.cfg
@@ -8,7 +8,7 @@ TRADE_QTY = 0.00005
 
 ORDER_TYPE = LIMIT
 
-# Limity pre volatilitu (percentá, oddelené čiarkou)
+#  ahoj Limity pre volatilitu (percentá, oddelené čiarkou)
 PROFIT_LEVELS_HIGH = 0.016,0.019,0.022,0.025
 LOSS_LIMIT_HIGH = 0.003
 
