--- a/ema10_limit.cfg
+++ b/ema10_limit.cfg
@@ -3,18 +3,14 @@ MAX_OPEN_ORDERS = 4
 PAUSE_ON_LOSS_RATIO = 1.1
 PAUSE_TIME = 60
 TRADE_INTERVAL = 30
-SYMBOL = BTCUSDC
 TRADE_QTY = 0.00005
-
 ORDER_TYPE = LIMIT
 
-#  ahoj Limity pre volatilitu (percentá, oddelené čiarkou)
+# Limity pre volatilitu (percentá, oddelené čiarkou)
 PROFIT_LEVELS_HIGH = 0.016,0.019,0.022,0.025
 LOSS_LIMIT_HIGH = 0.003
-
 PROFIT_LEVELS_MED = 0.014,0.017,0.020,0.023
 LOSS_LIMIT_MED = 0.003
-
 PROFIT_LEVELS_LOW = 0.012,0.014,0.016,0.018
 LOSS_LIMIT_LOW = 0.0025
 
