Zmena symbolu na BTCUSDT v ema10_limit.cfg – odstránenie chyby 'This symbol is not permitted for this account'

--- a/ema10_limit.cfg
+++ b/ema10_limit.cfg
@@ -5,7 +5,7 @@ PAUSE_TIME = 60
 TRADE_INTERVAL = 30
 TRADE_QTY = 0.00005
 ORDER_TYPE = LIMIT
-SYMBOL = BTCUSDC
+SYMBOL = BTCUSDT
 # Limity pre volatilitu (percentá, oddelené čiarkou)
 PROFIT_LEVELS_HIGH = 0.016,0.019,0.022,0.025
 LOSS_LIMIT_HIGH = 0.003
